--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,3 +1,39 @@
-<p>
-  add-product works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <strong><a class="navbar-brand" [routerLink]="['/create-order']" style="color: red; font-size: 24px; border: 2px solid black; padding: 6px; border-radius: 10px">Food-X</a></strong>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active my-2 my-lg-0">
+        <button class="btn btn-primary" [routerLink]="['/add-product']" style="margin-left:20px">Add Product </button>
+      </li>
+      <li class="nav-item my-2 my-lg-0">
+        <button class="btn btn-primary" [routerLink]="['/predict']" style="margin-left:20px">Predict</button>
+      </li>
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Kitchen Screen</button>
+    </div>
+  </div>
+</nav>
+<div class="container">
+<form class="container p-2" [formGroup]="productForm">
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Product Name :-</label>
+    <div class="col-sm-8">
+      <input type="email" class="form-control" placeholder="eg: Jumbo Chicken Wrap" formControlName="productName">
+    </div>
+  </div>
+  <hr>
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Product Value :-</label>
+    <div class="col-sm-8">
+      <input type="email" class="form-control" placeholder="eg: Jack Daniel" formControlName="productValue">
+    </div>
+  </div>
+</form>
+<button class="btn btn-warning" style="color: white;">Reste </button>
+<button class="btn btn-success" style="margin-left:20px; float: right;" (click)="addProduct()">Add Product </button>
+</div>
