--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,15 +1,51 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <strong><a class="navbar-brand" href="#" style="color: red; font-size: 24px; border: 2px solid black; padding: 6px; border-radius: 10px">Food-X</a></strong>
+  <strong><a class="navbar-brand" [routerLink]="['/create-order']" style="color: red; font-size: 24px; border: 2px solid black; padding: 6px; border-radius: 10px">Food-X</a></strong>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th>No</th>
+                      <th>Product Name</th>
+                      <th>Quantity</th>
+                      <th>Price</th>
+                    </tr>
+                  </thead>
+                  <tbody *ngFor="let item of order, let i = index">
+                    <tr>
+                      <th scope="row">{{i+1}}</th>
+                      <td>{{item.product_name}}</td>
+                      <td>{{item.quantity}}</td>
+                      <td>{{item.product_value*item.quantity}}&nbsp;<i class="fas fa-rupee-sign"></i></td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div style="text-align: center; font-size: 25px"><a >Total Price - <strong>{{totalValue}}&nbsp;<i class="fas fa-rupee-sign"></i></strong></a></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Place Order</button>
+          </div>
+        </div>
+      </div>
+    </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active my-2 my-lg-0">
         <button class="btn btn-primary" [routerLink]="['/add-product']" style="margin-left:20px">Add Product </button>
       </li>
-      <li class="nav-item">
+      <li class="nav-item my-2 my-lg-0">
         <button class="btn btn-primary" [routerLink]="['/predict']" style="margin-left:20px">Predict</button>
       </li>
     </ul>
@@ -18,6 +54,7 @@
     </form>
   </div>
 </nav>
+<div class="container">
 <form class="container p-2">
   <div class="form-group row">
     <label class="col-sm-2 col-form-label">Customer Name :-</label>
@@ -25,23 +62,25 @@
       <input type="email" class="form-control" placeholder="eg: Jack Daniel">
     </div>
   </div>
-  <div class="form-group row ">
+  <hr>
+  <div class="form-group row">
     <label class="col-sm-2 col-form-label">Product :-</label>
     <div class="col-sm-8">
     <div class="row scrolling-wrapper-flexbox">
-      <ul class="col-md-6" *ngFor="let product of products, let i = '0'" style="margin-bottom: 5px">
+      <ul class="col-md-6" *ngFor="let product of products, let i = index" style="margin-bottom: 5px">
       <li class="card" style="width: 18rem;" >
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted" style="text-align: center">{{product}}</h6>
+          <h6 class="card-subtitle m b-2 text-muted" style="text-align: center">{{product.product_name}}</h6>
           <hr>
-          <nav aria-label="...">
+          <nav class="row" style="display: flex; justify-content :space-around">
+            <a style="color: grey; align-self: center">Price:- <strong>{{product.product_value}}</strong>&nbsp;<i class="fas fa-rupee-sign"></i></a>
               <ul class="pagination" style="justify-content: center;">
-                <li class="page-item disabled">
-                  <a class="page-link" style="color:#007bff"><strong>-</strong></a>
-                </li>
-                <li class="page-item"><a class="page-link">{{i}}</a></li>
                 <li class="page-item">
-                  <a class="page-link" style="color:#007bff;"><strong>+</strong></a>
+                  <a class="page-link" style="color:#007bff; cursor: pointer;" (click)="decrease(i, product)"><strong>-</strong></a>
+                </li>
+                <li class="page-item"><a class="page-link">{{product.quantity}}</a></li>
+                <li class="page-item">
+                  <a class="page-link" style="color:#007bff; cursor: pointer;" (click)="increase(i, product)"><strong>+</strong></a>
                 </li>
               </ul>
             </nav>
@@ -51,4 +90,14 @@
     </div>
   </div>
   </div>
+  <hr>
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Total Cost :-</label>
+    <div class="col-sm-8" style="font-size: 25px">
+      <strong>{{totalValue}}&nbsp;<i class="fas fa-rupee-sign"></i></strong>
+    </div>
+  </div>
 </form>
+<button class="btn btn-warning" style="color: white;">Reste </button>
+<button class="btn btn-success" style="margin-left:20px; float: right;" (click)="confirm()" data-toggle="modal" data-target="#exampleModal">Confirm Order </button>
+</div>
