--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -12,9 +12,9 @@
       <li class="nav-item my-2 my-lg-0">
         <button class="btn btn-primary" [routerLink]="['/predict']" style="margin-left:20px">Predict</button>
       </li>
-    </ul>
+    </ul> 
     <div class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Kitchen Screen</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" [routerLink]="['/kitchen-screen']">Kitchen Screen</button>
     </div>
   </div>
 </nav>
@@ -34,6 +34,6 @@
     </div>
   </div>
 </form>
-<button class="btn btn-warning" style="color: white;">Reste </button>
+<button class="btn btn-warning" style="color: white;" (click)="productForm.reset()">Reset </button>
 <button class="btn btn-success" style="margin-left:20px; float: right;" (click)="addProduct()">Add Product </button>
 </div>
