--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -29,17 +29,17 @@
     <label class="col-sm-2 col-form-label">Product :-</label>
     <div class="col-sm-8">
     <div class="row scrolling-wrapper-flexbox">
-      <ul class="col-md-6" *ngFor="let product of products, let i = '0'" style="margin-bottom: 5px">
+      <ul class="col-md-6" *ngFor="let product of products" style="margin-bottom: 5px">
       <li class="card" style="width: 18rem;" >
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted" style="text-align: center">{{product}}</h6>
+          <h6 class="card-subtitle mb-2 text-muted" style="text-align: center">{{product.product_name}}</h6>
           <hr>
           <nav aria-label="...">
               <ul class="pagination" style="justify-content: center;">
                 <li class="page-item disabled">
                   <a class="page-link" style="color:#007bff"><strong>-</strong></a>
                 </li>
-                <li class="page-item"><a class="page-link">{{i}}</a></li>
+                <li class="page-item"><a class="page-link">0</a></li>
                 <li class="page-item">
                   <a class="page-link" style="color:#007bff;"><strong>+</strong></a>
                 </li>
